--- a/src/assets/styles/c-generic/_fonts.scss
+++ b/src/assets/styles/c-generic/_fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Quicksand:wght@300&family=Roboto:ital,wght@1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap');
