completion of the view of novels

--- a/src/assets/styles/c-generic/_vars.scss
+++ b/src/assets/styles/c-generic/_vars.scss
@@ -1,5 +1,5 @@
 .theme--light {
-  $--color-background-1: #f73e3e;
+  $--color-background-1: #FFFFFF;
   $--color-container-1: #C4737CE8;
   $--color-container-2: #C4737C9E;
   $--color-text-1: #000;
